fix: about me section to low height on smaller devices

--- a/src/assets/css/about_me/aboutme.css
+++ b/src/assets/css/about_me/aboutme.css
@@ -1,6 +1,6 @@
 .about_me {
     padding: 90px 80px;
-    height: 70vh;
+    height: 90vh;
     background: var(--black);
 }
 
@@ -30,5 +30,11 @@
 @media only screen and (max-width: 1082px) {
     .about_me {
         height: 100vh;
+    }
+}
+
+@media only screen and (max-width: 678px) {
+    .about_me {
+        height: 120vh;
     }
 }
